site.css
html {
    scroll-behavior: smooth;
}
body {
    background-color: #424547;
    color: white;
    align-content: center;
}
a:visited {
    color: inherit;

} 


@keyframes header-fade-in {
    from { opacity: 0; }
    to { opacity: 1; }
}
@keyframes header-fade-out {
    from { opacity: 1; }
    to { opacity: 0; }
}
.intro {
    display: flex;
    flex-flow: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
}
.title {
    display: flex;
    align-items: center;
    flex-flow: column;
    font-family: 'Raleway', sans-serif;
    animation-name: header-fade-in;
    animation-duration: 4s;
    animation-fill-mode: forwards;
    opacity: 0;
}
.title > h1 {
    margin-bottom: 5px;
    font-size: 3em;
}
.title > h2 {
    font-size: 1.3em;
}
nav > ul {
   font-family: 'Raleway', sans-serif;
   list-style: none; 
   display: flex;
   padding-inline-start: 0;
}
.intro-links {
   opacity: 0;
   animation-name: header-fade-in;
   animation-duration: 4s;
   animation-delay: 2s;
   animation-fill-mode: forwards;
}


.navbar {
    position: fixed;
    top: 0;
    left: 0;
    background-color: #6e7276;
    width: 100%;
    display: none;
    color: white;
    justify-content: center;
}
.navbar-fade-in {
    animation-name: header-fade-in;
    animation-duration: 4s;
    animation-fill-mode: forwards;
    opacity: 0;
}
.navbar-fade-out {
    animation-name: header-fade-out;
    animation-duration: 2.5s;
    animation-fill-mode: forwards;
    opacity: 1;
}
.navbar li:not(:last-child)::after {
    content: "\00a0|\00a0";
    display: inline-block;
    margin-left: 30px;
    margin-right: 30px;
}

main > section {
    min-height: 100vh;
}
.anchor {
    display: block;
    position: relative;
    top: -120px;
    visibility: hidden;
}

.work {
    margin-top: 10px;
}
.work > main {
    display: flex;
    justify-content: center;
}
.work > main > ul {
    display: grid;
    grid-column-gap: 50px;
    padding-left: 0;
}
@media(min-width: 703px) {
    .work > main > ul {
        grid-template-columns: auto auto;
    }
}
@media (max-width: 702px) {
    .work > main > ul {
        grid-template-columns: auto;
    }
}
.work > main > ul > li {
    list-style-type: none;
    max-width: 600px;
}
.workHistory > header {
    background-color: #f7c59f;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
    display: flex;
    justify-content: center;
    color: black;
}
.workHistory > main {
    background-color: #e9e3e6;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
    color: black;
    height: 220px;
    line-height: 1.4;
}
.workHistory > main li {
    margin-bottom: 10px;
}
h4, .education > main {
    text-align: center;
}

